--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="index.html">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Video.html">Journey<span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="Video.html">Recap<span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="about.html">About</a>
