--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
           <div class="footer_detail">
             <a href="" class="footer-logo">Farewell Tech Team</a>
             <p>Created by Avalon 2023-24 batch for 10th Graders</p>
-            
+            <a href ="https://sarbikdiyatech.github.io/SARBIK-DIYA-TECH/">Sarbik Diya Tech</a>
           </div>
         </div>
         
