--- a/Video.html
+++ b/Video.html
@@ -99,8 +99,13 @@
     <h2>Flash Mob Dance</h2>
     <iframe width="380" height="315" src="https://www.youtube.com/embed/6_HQaGFwSu0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     
+   
+
+   
     <h2>Behind the scenes</h2>
     <iframe width="380" height="315" src="https://www.youtube.com/embed/97lLZzOVeMQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <a href ="https://drive.google.com/drive/folders/1xozf5zrrIoMbSmrMIhbhVXZA80MuOj7U?usp=share_link"><h2>Farewell Photos Link</h2></a>
   </section>
 
   <!-- end food section -->
